# KeyPick

./: .gitignore  .sops.yaml  .sops.yaml.example  CHANGELOG.md  Cargo.toml  LICENSE  NEXT_STEPS.md  POTENTIAL_FEATURES.md  README.md  TUTORIAL.md  convo.md  install.ps1  install.sh  keypick-architecture.excalidraw  package.json  uninstall.ps1  uninstall.sh
.claude/skills/archon/guides/: setup.md
.github/workflows/: ci.yml  release.yml  vault-sync.yml
.tide/: index.db  index.db-shm  index.db-wal  permissions.json  research.md  router-state.json
.tide/plans/: fix-terminal-input-after-biometric-auth.json
.tide/sessions/: 2026-03-19T15-29-50.md  2026-03-19T16-33-02.md
docs/superpowers/plans/: 2026-03-18-setup-installer.md  2026-04-14-env-file-management.md
docs/superpowers/specs/: 2026-03-18-setup-installer-design.md  2026-04-14-env-file-management-design.md
rust/: Cargo.toml
rust/src/: auth.rs  terminal.rs  vault.rs
rust/src/commands/: add.rs  auto_export.rs  copy.rs  list.rs  mod.rs
rust/src/commands/env/: mod.rs  utils.rs
rust/src/commands/setup/: actions.rs  init.rs  join.rs  prerequisites.rs  recovery.rs  utils.rs
skills/keypick/: SKILL.md
src/: auth.rs  main.rs  terminal.rs  vault.rs
src/commands/: add.rs  auto_export.rs  copy.rs  extract.rs  interactive.rs  list.rs  mod.rs  vaults.rs
src/commands/env/: pull.rs  push.rs  status.rs
src/commands/setup/: actions.rs  init.rs  join.rs  keygen.rs  mod.rs  prerequisites.rs  recovery.rs  utils.rs
target-codex/: .rustc_info.json
ts/: package.json  tsconfig.json
ts/src/: main.ts
ts/src/assets/: vault-sync.yml
ts/src/commands/: add.ts  auto_export.ts  copy.ts  extract.ts  interactive.ts  list.ts  vaults.ts
ts/src/commands/env/: index.ts  pull.ts  push.ts  status.ts  (+1 more)
ts/src/lib/: auth.ts  fs.ts  terminal.ts  vault.ts  wsl.ts
(+40 files in other folders)
