[package]
name = "key-pick"
version = "0.1.0"
edition = "2021"
description = "Cross-platform, biometric-secured API key vault manager powered by SOPS + age"
authors = ["You"]

[[bin]]
name = "key-pick"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Interactive CLI prompts
inquire = "0.7"

# Cross-platform biometric auth (Windows Hello / TouchID / polkit)
robius-authentication = "0.1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Colored terminal output
colored = "2"

# Clipboard support
arboard = "3"

[profile.release]
opt-level = 3
strip = true
