[package]
name = "keypick"
version = "0.1.0"
edition = "2021"
description = "Cross-platform, biometric-secured API key vault manager powered by SOPS + age"
authors = ["You"]

[[bin]]
name = "keypick"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Interactive CLI prompts
inquire = "0.7"

# Terminal state management (restore raw mode on unexpected exit)
crossterm = "0.25"

# Cross-platform biometric auth (Windows Hello / TouchID / polkit)
robius-authentication = "0.1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Colored terminal output
colored = "2"

# Clipboard support
arboard = "3"

# TUI progress indicators (spinners, progress bars)
indicatif = "0.17"

# HTTP client for downloading binaries
reqwest = { version = "0.12", features = ["blocking"] }

# Cross-platform standard directories
dirs = "5"

# Temp files for safe downloads
tempfile = "3"

[profile.release]
opt-level = 3
strip = true
